IntergalacticFreightTrades/force-app/main/default/objects/Shipment__c/fields/Assigned_Agent__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Agent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Shipments</relationshipLabel>
    <relationshipName>Shipments</relationshipName>
    <type>Lookup</type>
</CustomField>