IntergalacticFreightTrades/force-app/main/default/objects/Shipment__c/fields/Delay_Notification_Sent__c.field-meta.xml
<CustomField>
    <fullName>Delay_Notification_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Acts as a toggle to prevent the notification from being sent repeatedly every time the record is edited while still in a &apos;Delayed&apos; status.</description>
    <label>Delay Notification Sent</label>
    <type>Checkbox</type>
</CustomField>