IntergalacticFreightTrades/force-app/main/default/objects/Shipment__c/fields/Fuel_Cost__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Cost__c</fullName>
    <label>Fuel Cost</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>