IntergalacticFreightTrades/force-app/main/default/objects/Shipment__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Shipments (Opportunity)</relationshipLabel>
    <relationshipName>Shipments1</relationshipName>
    <type>Lookup</type>
</CustomField>