IntergalacticFreightTrades/force-app/main/default/objects/Shipment__c/fields/Planetary_System__c.field-meta.xml
<CustomField>
    <fullName>Planetary_System__c</fullName>
    <label>Planetary System</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alpha Centauri</fullName>
                <default>true</default>
                <label>Alpha Centauri</label>
            </value>
            <value>
                <fullName>Sirius</fullName>
            </value>
            <value>
                <fullName>Proxima Centauri</fullName>
            </value>
            <value>
                <fullName>Trappist-1</fullName>
            </value>
            <value>
                <fullName>Earth</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>