IntergalacticFreightTrades/force-app/main/default/objects/Shipment__c/fields/Total_Weight_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Total_Weight_Capacity__c</fullName>
    <label>Total Weight Capacity</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>