IntergalacticFreightTrades/force-app/main/default/objects/Shipment__c/validationRules/ETA_Must_Be_After_Departure.validationRule-meta.xml
<ValidationRule>
    <fullName>ETA_Must_Be_After_Departure</fullName>
    <active>true</active>
    <description>Ensure the Estimated Time of Arrival is logically after the Departure Date.</description>
    <errorConditionFormula>AND( NOT(ISBLANK( Departure_Date__c )), NOT(ISBLANK( ETA__c )),  ETA__c  &lt;=  Departure_Date__c )</errorConditionFormula>
    <errorDisplayField>ETA__c</errorDisplayField>
    <errorMessage>Estimated Time of Arrival must be after the Departure Date.</errorMessage>
</ValidationRule>